# faml

./: .travis.yml  CMakeLists.txt  README  README.md
examples/: CMakeLists.txt
examples/50k/: CMakeLists.txt
examples/50k/acid/: predict.cpp
examples/50k/riad/: CMakeLists.txt  predict.cpp  test.cpp
examples/digits_recognition/: .riad.cpp.swp  .riad_result.cpp.swp  CMakeLists.txt  predict.cpp  prepare.cpp  riad.cpp  riad_result.cpp
examples/digits_recognition/acid/: CMakeLists.txt  predict.cpp  prepare.cpp
examples/digits_recognition/riad/: CMakeLists.txt  riad.cpp  riad_result.cpp
examples/linear_models/: CMakeLists.txt  linear_regression.cpp  logistic_regression.cpp
include/faml/: cross_validation.hpp  data.hpp  distances.hpp  io.hpp  kernels.hpp
include/faml/algebra/: sparse_vector.hpp
include/faml/cross_validation/: cross_validation.hpp  kfold.hpp  shuffle_split.hpp  split.hpp
include/faml/data/: table.hpp
include/faml/data/impl/: table.hpp  table_view.header.hpp  table_view.impl.hpp
include/faml/io/: readers.hpp
include/faml/models/: knn.hpp  linear_regression.hpp  logistic_regression.hpp  predictor.hpp  tree.hpp
include/faml/models/tree/: tree.hpp
include/faml/models/tree/trainers/: ID3PruningTrainer.hpp  ID3Trainer.hpp
include/faml/preprocessing/: scaler.hpp
include/faml/quality/: classification.hpp  regression.hpp
include/faml/statistics/: informativity_criteria.hpp  statistics.hpp  variation_indices.hpp
include/faml/utility/: iterator.hpp  utility.hpp
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/50k/: CMakeLists.txt
src/examples/50k/acid/: CMakeLists.txt  predict.cpp
src/examples/50k/riad/: CMakeLists.txt  predict.cpp
src/examples/digits_recognition/acid/: predict.cpp
src/examples/digits_recognition/riad/: CMakeLists.txt  riad.cpp  riad_result.cpp
src/examples/linear_models/: CMakeLists.txt  linear_regression.cpp  logistic_regression.cpp
src/faml/cross_validation/: kfold.hpp
src/faml/data/: file_streaming_table.hpp  merge.hpp  streaming_table.hpp
src/faml/data/impl/: table_rows_proxy.hpp  table_view.header.hpp
src/faml/io/: io.hpp  parsers.hpp
src/faml/models/: knn.hpp  tree.hpp
src/faml/models/tree/: tree.hpp
src/faml/models/tree/trainers/: ID3PruningTrainer.hpp  ID3Trainer.hpp
src/faml/new_table/: in_memory_table.hpp  table.hpp
src/faml/quality/: classification.hpp
src/faml/statistics/: statistics.hpp
src/faml/utility/: iterator.hpp  utility.hpp
src/tests/: CMakeLists.txt  test_tables.cpp
